fin v0.1  - add Device manage authority to v0.2

--- a/emb_ver01/AndroidManifest.xml
+++ b/emb_ver01/AndroidManifest.xml
@@ -28,9 +28,10 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
          <receiver 
-            android:name=".LockerActivity$DpmClass"
+            android:name=".DPMReciver"
             android:permission="android.permission.BIND_DEVICE_ADMIN">
-            <meta-data android:name="android.app.device_admin"
+            <meta-data 
+                android:name="android.app.device_admin"
                 android:resource="@xml/device_admin"/>
             <intent-filter>
                 <action android:name="android.app.action.DEVICE_ADMIN_ENABLED"/>
