--- a/emb_ver01/bin/AndroidManifest.xml
+++ b/emb_ver01/bin/AndroidManifest.xml
@@ -27,6 +27,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <!-- for applist -->
          <receiver 
             android:name=".DPMReciver"
             android:permission="android.permission.BIND_DEVICE_ADMIN">
@@ -37,8 +38,9 @@
                 <action android:name="android.app.action.DEVICE_ADMIN_ENABLED"/>
             </intent-filter>
         </receiver>
+        <!-- startActivity -->
         <activity
-            android:name="com.example.emb_ver01.MainActivity"
+            android:name="com.example.emb_ver01.activitys.WarningActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -47,6 +49,23 @@
             </intent-filter>
         </activity>
         
+        <activity
+            android:name="com.example.emb_ver01.activitys.CurrentSelectedActivity" 
+            android:label="@string/app_name">
+            
+        </activity>
+        
+        <activity
+            android:name="com.example.emb_ver01.activitys.InputDateActivity" 
+            android:label="@string/app_name">
+            
+        </activity>
+        
+        <activity
+            android:name="com.example.emb_ver01.activitys.SelectAppsActivity" 
+            android:label="@string/app_name">
+            
+        </activity>
     </application>
 
 </manifest>
